tests/baselines/reference/signatureLengthMismatchConstruct.errors.txt
tests/cases/compiler/signatureLengthMismatchConstruct.ts(9,15): error TS2345: Argument of type 'typeof OverlongCtor' is not assignable to parameter of type 'new (a: number) => void'.
  Types of construct signatures are incompatible.
    Type 'new (a: number, b: number) => OverlongCtor' is not assignable to type 'new (a: number) => void'.
      Construct signature '(a: number, b: number): OverlongCtor' expects more arguments than construct signature '(a: number): void'.


==== tests/cases/compiler/signatureLengthMismatchConstruct.ts (1 errors) ====
    function takesCallback(fn: new (a: number) => void) {
      // ...
    }
    
    class OverlongCtor {
      constructor(a: number, b: number) {}
    }
    
    takesCallback(OverlongCtor);
                  ~~~~~~~~~~~~
!!! error TS2345: Argument of type 'typeof OverlongCtor' is not assignable to parameter of type 'new (a: number) => void'.
!!! error TS2345:   Types of construct signatures are incompatible.
!!! error TS2345:     Type 'new (a: number, b: number) => OverlongCtor' is not assignable to type 'new (a: number) => void'.
!!! error TS2345:       Construct signature '(a: number, b: number): OverlongCtor' expects more arguments than construct signature '(a: number): void'.
    